[package]
name = "encoder"
version = "0.1.0"
authors = ["chad"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

default = ["std", "hal", "esp-idf-sys/native"]


hal = ["esp-idf-hal"]
std = ["esp-idf-sys/std", "esp-idf-sys/binstart", "esp-idf-hal?/std"]

[dependencies]
esp-idf-sys = { version = "0.34", default-features = false }
esp-idf-hal = { version = "0.43", optional = true, default-features = false }
